// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F-UT-SNAPSHOT: Flashcards Snapshot Tests should match flashcards page snapshot (list mode) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-amber-50 via-white to-rose-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 pt-24 pb-10"
>
  <div
    class="container mx-auto px-4 max-w-4xl"
  >
    <div
      class="text-center mb-8"
    >
      <div
        class="w-20 h-20 bg-gradient-to-r from-amber-500 to-rose-600 rounded-2xl flex items-center justify-center mx-auto mb-6"
      >
        <span>
          📖
        </span>
      </div>
      <h1
        class="text-3xl font-bold text-gray-900 dark:text-white"
      >
        Flashcards
      </h1>
      <p
        class="text-gray-600 dark:text-gray-400 mt-2"
      >
        Review questions you saved from practice.
      </p>
    </div>
    <div
      class="mb-6 flex flex-col sm:flex-row gap-4 justify-center"
    >
      <button
        class="inline-flex items-center justify-center space-x-2 px-6 py-3 bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white rounded-xl font-semibold transition-all shadow-lg hover:shadow-xl"
      >
        <span>
          ⇄
        </span>
        <span>
          Practice with Flip Cards
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center space-x-2 px-6 py-3 bg-gradient-to-r from-green-500 to-emerald-600 hover:from-green-600 hover:to-emerald-700 text-white rounded-xl font-semibold transition-all shadow-lg hover:shadow-xl"
      >
        <span>
          🎯
        </span>
        <span>
          Quiz Mode
        </span>
      </button>
    </div>
    <div
      class="mb-6 bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl p-4 border border-white/30 dark:border-gray-700/30"
    >
      <div
        class="flex items-center space-x-2 mb-4"
      >
        <span>
          🔽
        </span>
        <span
          class="font-semibold text-gray-900 dark:text-white"
        >
          Filters
        </span>
      </div>
      <div
        class="flex flex-wrap gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
          >
            Section
          </label>
          <select
            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
          >
            <option
              value="all"
            >
              All Sections
            </option>
            <option
              value="HTML"
            >
              HTML
            </option>
          </select>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
          >
            Difficulty
          </label>
          <select
            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
          >
            <option
              value="all"
            >
              All Difficulties
            </option>
            <option
              value="easy"
            >
              easy
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="mb-6 text-center"
    >
      <div
        class="inline-flex items-center space-x-6 px-6 py-3 bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl border border-white/30 dark:border-gray-700/30"
      >
        <div>
          <div
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            1
          </div>
          <div
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            Total Cards
          </div>
        </div>
        <div
          class="h-12 w-px bg-gray-300 dark:bg-gray-600"
        />
        <div>
          <div
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            1
          </div>
          <div
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            Total Saved
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 gap-4"
    >
      <div
        class="bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl p-5 border border-white/30 dark:border-gray-700/30 shadow"
      >
        <div
          class="flex justify-between items-start gap-4"
        >
          <div>
            <div
              class="text-sm text-gray-500 dark:text-gray-400 mb-1"
            >
              HTML
               
              • easy
            </div>
            <div
              class="font-medium text-gray-900 dark:text-white"
            >
              Test Question
            </div>
          </div>
          <button
            class="p-2 rounded-md text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20"
            title="Remove from Flashcards"
          >
            <span>
              🗑️
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`F-UT-SNAPSHOT: Flashcards Snapshot Tests should match flashcards page snapshot (with flashcards) 1`] = `
<div
  class="min-h-screen bg-gradient-to-br from-amber-50 via-white to-rose-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 pt-24 pb-10"
>
  <div
    class="container mx-auto px-4 max-w-4xl"
  >
    <div
      class="text-center mb-8"
    >
      <div
        class="w-20 h-20 bg-gradient-to-r from-amber-500 to-rose-600 rounded-2xl flex items-center justify-center mx-auto mb-6"
      >
        <span>
          📖
        </span>
      </div>
      <h1
        class="text-3xl font-bold text-gray-900 dark:text-white"
      >
        Flashcards
      </h1>
      <p
        class="text-gray-600 dark:text-gray-400 mt-2"
      >
        Review questions you saved from practice.
      </p>
    </div>
    <div
      class="mb-6 flex flex-col sm:flex-row gap-4 justify-center"
    >
      <button
        class="inline-flex items-center justify-center space-x-2 px-6 py-3 bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white rounded-xl font-semibold transition-all shadow-lg hover:shadow-xl"
      >
        <span>
          ⇄
        </span>
        <span>
          Practice with Flip Cards
        </span>
      </button>
      <button
        class="inline-flex items-center justify-center space-x-2 px-6 py-3 bg-gradient-to-r from-green-500 to-emerald-600 hover:from-green-600 hover:to-emerald-700 text-white rounded-xl font-semibold transition-all shadow-lg hover:shadow-xl"
      >
        <span>
          🎯
        </span>
        <span>
          Quiz Mode
        </span>
      </button>
    </div>
    <div
      class="mb-6 bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl p-4 border border-white/30 dark:border-gray-700/30"
    >
      <div
        class="flex items-center space-x-2 mb-4"
      >
        <span>
          🔽
        </span>
        <span
          class="font-semibold text-gray-900 dark:text-white"
        >
          Filters
        </span>
      </div>
      <div
        class="flex flex-wrap gap-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
          >
            Section
          </label>
          <select
            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
          >
            <option
              value="all"
            >
              All Sections
            </option>
            <option
              value="HTML"
            >
              HTML
            </option>
            <option
              value="CSS"
            >
              CSS
            </option>
          </select>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
          >
            Difficulty
          </label>
          <select
            class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
          >
            <option
              value="all"
            >
              All Difficulties
            </option>
            <option
              value="easy"
            >
              easy
            </option>
            <option
              value="medium"
            >
              medium
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="mb-6 text-center"
    >
      <div
        class="inline-flex items-center space-x-6 px-6 py-3 bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl border border-white/30 dark:border-gray-700/30"
      >
        <div>
          <div
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            2
          </div>
          <div
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            Total Cards
          </div>
        </div>
        <div
          class="h-12 w-px bg-gray-300 dark:bg-gray-600"
        />
        <div>
          <div
            class="text-2xl font-bold text-gray-900 dark:text-white"
          >
            2
          </div>
          <div
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            Total Saved
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 gap-4"
    >
      <div
        class="bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl p-5 border border-white/30 dark:border-gray-700/30 shadow"
      >
        <div
          class="flex justify-between items-start gap-4"
        >
          <div>
            <div
              class="text-sm text-gray-500 dark:text-gray-400 mb-1"
            >
              HTML
               
              • easy
            </div>
            <div
              class="font-medium text-gray-900 dark:text-white"
            >
              Test Question 1
            </div>
          </div>
          <button
            class="p-2 rounded-md text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20"
            title="Remove from Flashcards"
          >
            <span>
              🗑️
            </span>
          </button>
        </div>
      </div>
      <div
        class="bg-white/80 dark:bg-gray-800/80 backdrop-blur-xl rounded-xl p-5 border border-white/30 dark:border-gray-700/30 shadow"
      >
        <div
          class="flex justify-between items-start gap-4"
        >
          <div>
            <div
              class="text-sm text-gray-500 dark:text-gray-400 mb-1"
            >
              CSS
               
              • medium
            </div>
            <div
              class="font-medium text-gray-900 dark:text-white"
            >
              Test Question 2
            </div>
          </div>
          <button
            class="p-2 rounded-md text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20"
            title="Remove from Flashcards"
          >
            <span>
              🗑️
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
